--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,12 +65,13 @@ dependencies:
   gap: ^3.0.1
   muslim_data_flutter: ^1.1.3
   intl: ^0.20.2
-  geolocator: ^10.1.0
+  geolocator: ^14.0.2
   geocoding: ^2.1.1
   adhan: ^2.0.0
   hijri: ^3.0.0
   flutter_svg: ^2.2.1
   rename_app: ^1.6.5
+  flutter_qiblah: ^3.2.0
  
   
   # Search and filtering
@@ -116,6 +117,7 @@ flutter:
   - assets/pagesQuran.json
   - assets/azkar.json
   - assets/data/svgIcons/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
